Update payment template

--- a/registry/templates/payments/subscribe.html
+++ b/registry/templates/payments/subscribe.html
@@ -160,6 +160,9 @@
             <p>
                 Alumni membership can be deducted from (German) taxes.
             </p>
+            <p>
+                If you run into any trouble or have any questions, please drop us an e-mail at <a href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a>.
+            </p>
 
         </div>
 
@@ -205,9 +208,6 @@
                             </li>
                             <li>
                                 You can always change your membership in the membership portal.
-                            </li>
-                            <li>
-                                If you run into any trouble, please drop as an e-mail at <a href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a>.
                             </li>
                         </ul>
                     </div>
