--- a/registry/templates/registry/index.html
+++ b/registry/templates/registry/index.html
@@ -51,7 +51,7 @@
                     Stay in touch with the University via regular newsletters
                 </li>
                 <li>
-                    Lifelong career services in collaboration with the University
+                    Career services in collaboration with the University
                 </li>
                 <li>
                     Invitations to University events and alumni events
