--- a/registry/templates/registry/index.html
+++ b/registry/templates/registry/index.html
@@ -16,13 +16,7 @@
         <p>
             If you are an existing member, please use this opportunity to update your data and enable the recurring payment of the membership fees.
             The fee for 2017 is due by the end of the year.
-            The registration process will feel like a new application but rest assured that your Jacob Alumni Google account remains intact.
-        </p>
-
-        <p>
-            If you are an existing member, please use this opportunity to update your data and enable the recurring payment of the membership fees.
-            The fee for 2017 is due by the end of the year.
-            The registration process will feel like a new application but rest assured that your Jacob Alumni Google account remains intact.
+            The registration process will feel like a new application but rest assured that your Jacobs Alumni Google account remains intact.
         </p>
 
         <div class="uk-margin uk-button-group">
