--- a/registry/templates/static/imprint.html
+++ b/registry/templates/static/imprint.html
@@ -18,11 +18,11 @@
   Jacobs University Bremen Alumni Association e.V. ist ein gemeinnütizger Verein.
 </p>
 <p>
-  President: Peter Dabrowski<br/>
-  Vize-President: Daniel Alonso<br/>
-  Schatzmeister: Anna Rebecca Habighorst<br/>
-  Schriftführer: Stefan Anca<br/>
-  Beisitzer: Stefan Rustler, Elena Isac, Alina Degtiarova, Philipp Herzberg<br/>
+  President: Anne Valtink<br/>
+  Vize-President: Stefan Rustler<br/>
+  Schatzmeister: Stefan Kuzmanovski<br/>
+  Schriftführer: Razvan Barabaş<br/>
+  Beisitzer: Elena Isac, Max Lohmann, Lida-Maria Lottko, Anna-Lena Schindl, Tom Wiesing<br/>
 </p>
 <p>
   Handelsregister<br/>
