Update devel warning
This commit updates the development warning to prominently show in the
header and also show up in the django admin interface.

--- a/registry/templates/base/footer.html
+++ b/registry/templates/base/footer.html
@@ -1,6 +1,7 @@
 {% load staticfiles %}
 
 <footer class="footer uk-background-secondary uk-light uk-padding">
+    {% include "base/devel.html" %}
    <div class="uk-grid uk-margin-medium-bottom uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid="true">
       <div>
          <figure>
