--- a/registry/templates/base/devel.html
+++ b/registry/templates/base/devel.html
@@ -1,5 +1,7 @@
 {% if show_devel_warning %}
-    <div class="uk-alert-danger" uk-alert class="uk-width-1-1">
-        <p>Testing site do not use for real world purposes. </p>
+    <div>
+        <div class="uk-alert-danger" uk-alert class="uk-width-1-1">
+            <p>Testing site do not use for real world purposes. </p>
+        </div>
     </div>
 {% endif %}
