Cleanup templates to always reverse links
This commit cleans up the templates to use 'reverse' instead of hard
coded links whenever possible.

--- a/registry/templates/base/footer.html
+++ b/registry/templates/base/footer.html
@@ -49,6 +49,8 @@
       </div>
    </div>
    <div class="copyright uk-text-small">
-      <p>Copyright © 2017 Jacobs University Alumni Association. All Rights Reserved.<br><a href="/privacy/">Datenschutzerklärung / Privacy Policy</a> <a href="/imprint/">Impressum / Imprint</a></p>
+      <p>
+          Copyright © 2017-18 Jacobs University Alumni Association. All Rights Reserved. <br>
+          <a href="{% url 'privacy' %}">Datenschutzerklärung / Privacy Policy</a> <a href="{% url 'imprint' %}">Impressum / Imprint</a></p>
    </div>
 </footer>
