--- a/registry/templates/portal/parts/account.html
+++ b/registry/templates/portal/parts/account.html
@@ -28,6 +28,6 @@
         </table>
     </div>
     <div class="uk-card-footer">
-        <a href="/edit/password/" class="uk-button uk-button-text">Change Portal Password</a>
+        <a href="{% url 'edit_password' %}" class="uk-button uk-button-text">Change Portal Password</a>
     </div>
 </div>
