--- a/registry/templates/portal/parts/address.html
+++ b/registry/templates/portal/parts/address.html
@@ -41,6 +41,6 @@
         </table>
     </div>
     <div class="uk-card-footer">
-        <a href="/edit/address/" class="uk-button uk-button-text">Edit Address</a>
+        <a href="{% url 'edit' %}" class="uk-button uk-button-text">Edit Address</a>
     </div>
 </div>
