--- a/registry/templates/portal/parts/jacobs.html
+++ b/registry/templates/portal/parts/jacobs.html
@@ -38,6 +38,6 @@
         </table>
     </div>
     <div class="uk-card-footer">
-        <a href="/edit/jacobs/" class="uk-button uk-button-text">Edit Jacobs Data</a>
+        <a href="{% url 'edit_jacobs' %}" class="uk-button uk-button-text">Edit Jacobs Data</a>
     </div>
 </div>
