--- a/registry/templates/portal/parts/job.html
+++ b/registry/templates/portal/parts/job.html
@@ -35,6 +35,6 @@
         </table>
     </div>
     <div class="uk-card-footer">
-        <a href="/edit/job/" class="uk-button uk-button-text">Edit Job Information</a>
+        <a href="{% url 'edit_job' %}" class="uk-button uk-button-text">Edit Job Information</a>
     </div>
 </div>
