--- a/registry/templates/portal/parts/payment.html
+++ b/registry/templates/portal/parts/payment.html
@@ -15,6 +15,6 @@
         </table>
     </div>
     <div class="uk-card-footer">
-        <a href="/edit/" class="uk-button uk-button-text">Edit Payment Information</a>
+        <a href="#" class="uk-button uk-button-text" disabled>Edit Payment Information</a>
     </div>
 </div>
