--- a/registry/templates/portal/parts/skills.html
+++ b/registry/templates/portal/parts/skills.html
@@ -39,6 +39,6 @@
         </table>
     </div>
     <div class="uk-card-footer">
-        <a href="/edit/skills/" class="uk-button uk-button-text">Edit Education and Skills</a>
+        <a href="{% url 'edit_skills' %}" class="uk-button uk-button-text">Edit Education and Skills</a>
     </div>
 </div>
