--- a/registry/templates/portal/parts/social.html
+++ b/registry/templates/portal/parts/social.html
@@ -39,6 +39,6 @@
         </table>
     </div>
     <div class="uk-card-footer">
-        <a href="/edit/social/" class="uk-button uk-button-text">Edit Social Media Links</a>
+        <a href="{% url 'edit_social' %}" class="uk-button uk-button-text">Edit Social Media Links</a>
     </div>
 </div>
