--- a/registry/templates/base/header.html
+++ b/registry/templates/base/header.html
@@ -3,7 +3,7 @@
   <div class="uk-navbar-container navbar uk-dark">
     <nav class="uk-navbar" {% if show_devel_warning %}style="background-color: #fef4f6; "{% endif %}">
       <div class="uk-navbar-left">
-        <a href="/" class="uk-navbar-item uk-logo">
+        <a href="{% url 'portal' %}" class="uk-navbar-item uk-logo">
           <span class="logo-button uk-margin-small-right">
             <img src="{%  static "media/favicon.png" %}" />
           </span>
@@ -18,16 +18,16 @@
       <div class="uk-navbar-right">
         <ul class="uk-navbar-nav uk-visible@l">
             <li><a class="uk-active" href="/">Home</a></li>
-            {% if not user.is_authenticated %}<li><a class="uk-active" href="/login/">Login</a></li>{% endif %}
-            {% if user.is_staff %}<li><a class="uk-active" href="/admin/">Django Admin</a></li>{% endif %}
+            {% if not user.is_authenticated %}<li><a class="uk-active" href="{% url 'login' %}">Login</a></li>{% endif %}
+            {% if user.is_staff %}<li><a class="uk-active" href="{% url 'admin:index' %}">Django Admin</a></li>{% endif %}
         </ul>
         <div class="uk-navbar-item">
             {% if user.is_authenticated %}
-                <a href="/logout/" class="uk-button uk-button-primary rounded bg-transparent uk-text-primary">
+                <a href="{% url 'logout' %}" class="uk-button uk-button-primary rounded bg-transparent uk-text-primary">
                     Logout
                 </a>
             {% else %}
-                <a href="/register/" class="uk-button uk-button-primary rounded bg-transparent uk-text-primary">
+                <a href="{% url 'register' %}" class="uk-button uk-button-primary rounded bg-transparent uk-text-primary">
                     Register
                 </a>
             {% endif %}
