--- a/registry/templates/payments/subscribe.html
+++ b/registry/templates/payments/subscribe.html
@@ -41,7 +41,7 @@
                     color: '#fa755a',
                     iconColor: '#fa755a'
                 }
-            }
+            };
             // Create an instance of the card Element
             var card = elements.create('card', {style: style});
 
@@ -66,8 +66,15 @@
                 }
             });
 
-            function stripeTokenHandler(token) {
-                document.getElementById('id_token').value = token.id;
+            function stripeCardHandler(token) {
+                document.getElementById('id_token').value = token;
+                document.getElementById("payment-form").submit();
+            }
+
+            function stripeSepaHandler(mandate) {
+                console.log("YOLO: Managed to handle sepa handler");
+                document.getElementById('id_sepa_mandate').value = JSON.stringify(mandate);
+                document.getElementById('id_token').value = mandate.id;
                 document.getElementById("payment-form").submit();
             }
 
@@ -79,32 +86,70 @@
             // Handle form submission
             var form = document.getElementById('payment-form');
             form.addEventListener('submit', function (event) {
+                console.log("YOLO: trying to prevent default");
                 event.preventDefault();
-
+                console.log("YOLO: prevented default");
                 // hide the error message (if any)
                 errorElement.style.display = 'none';
                 errorElement.style.visibility = 'hidden';
-
-                stripe.createToken(card).then(function (result) {
-                    console.log(result);
-                    if (result.error) {
-                        // Inform the user if there was an error
-                        errorElement.style.display = 'block';
-                        errorElement.style.visibility = 'visible';
-                        errorElement.textContent = result.error.message;
-                    } else {
-                        // Send the token to your server
-                        stripeTokenHandler(result.token);
-                    }
-                });
+                var ptype = $('#id_payment_type').val();
+                if (ptype === "card") {
+                    stripe.createToken(card).then(function (result) {
+                        console.log(result);
+                        if (result.error) {
+                            // Inform the user if there was an error
+                            errorElement.style.display = 'block';
+                            errorElement.style.visibility = 'visible';
+                            errorElement.textContent = result.error.message;
+                        } else {
+                            // Send the token to your server
+                            stripeCardHandler(result.token.id);
+                        }
+                    });
+                } else if (ptype === "sepa") {
+                    var bankAccount = {
+                        type: 'sepa_debit',
+                        sepa_debit: {
+                          iban: document.getElementById('iban').value,
+                        },
+                        currency: 'eur',
+                        owner:{
+                            name: document.getElementById('name').value
+                        }
+                    };
+                    stripe.createSource(bankAccount).then(function (result) {
+                        console.log(result);
+                        if (result.error) {
+                            // Inform the user if there was an error
+                            errorElement.style.display = 'block';
+                            errorElement.style.visibility = 'visible';
+                            errorElement.textContent = result.error.message;
+                        } else {
+                            // Send the token to your server
+                            console.log(result.source);
+                            stripeSepaHandler(result.source);
+                        }
+                    });
+                }
             });
             $('#id_tier').change(function () {
                 var selected = $(this).find(':selected').val();
                 $('#id_tier').parent().next().html(membership_options[selected]);
-                if(selected === 'st'){
+                if (selected === 'st') {
                     $("#div_id_starterReason").show()
                 } else {
                     $("#div_id_starterReason").hide()
+                }
+            }).trigger('change');
+            $('#id_payment_type').change(function () {
+                var selected = $(this).find(':selected').val();
+                $('#id_tier').parent().next().html(membership_options[selected]);
+                if (selected === 'card') {
+                    $("#stripe-card-elements").show();
+                    $("#stripe-sepa-elements").hide();
+                } else {
+                    $("#stripe-card-elements").hide();
+                    $("#stripe-sepa-elements").show();
                 }
             }).trigger('change');
         }
@@ -152,16 +197,19 @@
             </p>
 
             <p>
-                Your contributions make the Association an autonomous organization and help achieve our mission to make a difference for our alma mater and
+                Your contributions make the Association an autonomous organization and help achieve our mission to make
+                a difference for our alma mater and
                 our growing global network.
-                In particular, you are supporting scholarships to Jacobs students and the many projects we have in our pipeline!
+                In particular, you are supporting scholarships to Jacobs students and the many projects we have in our
+                pipeline!
             </p>
 
             <p>
                 Alumni membership can be deducted from (German) taxes.
             </p>
             <p>
-                If you run into any trouble or have any questions, please drop us an e-mail at <a href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a>.
+                If you run into any trouble or have any questions, please drop us an e-mail at <a
+                    href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a>.
             </p>
 
         </div>
@@ -176,25 +224,41 @@
                     </div>
                 </div>
 
-                <div>
+                <div id="stripe-card-elements">
                     <label for="card-element" class="uk-form-label">
                         Credit or debit card *
                     </label>
                     <div id="card-element" class="uk-form-controls uk-form-controls-text">
                         <!-- a Stripe Element will be inserted here. -->
                     </div>
-
-                    <!-- Used to display form errors -->
-                    <div role="alert" class="uk-form-controls uk-form-controls-text">
-                        <div class="uk-alert-danger" id="card-errors" uk-alert>
-                            You need to enable JavaScript for this to work.
-                        </div>
-                        <p>
-                            Your payment info is sent directly to <a href="https://stripe.com/"
-                                                                     target="_blank">Stripe</a> via your browser
-                            and never reaches Jacobs Alumni Servers.
-                        </p>
+                </div>
+                <div id="stripe-sepa-elements">
+                    <label for="sepa-element" class="uk-form-label">
+                        SEPA Direct debit
+                    </label>
+                    <div id="sepa-element" class="uk-form-controls uk-form-controls-text">
+                        <!-- a Stripe Element will be inserted here. -->
+                        <label>
+                            <span>Name</span>
+                            <input id="name" class="field" placeholder="Jenny Rosen"/>
+                        </label>
+                        <label>
+                            <span>IBAN</span>
+                            <input id="iban" class="field" placeholder="DE89370400440532013000"/>
+                        </label>
                     </div>
+                </div>
+
+                <!-- Used to display form errors -->
+                <div role="alert" class="uk-form-controls uk-form-controls-text">
+                    <div class="uk-alert-danger" id="card-errors" uk-alert>
+                        You need to enable JavaScript for this to work.
+                    </div>
+                    <p>
+                        Your payment info is sent directly to <a href="https://stripe.com/"
+                                                                 target="_blank">Stripe</a> via your browser
+                        and never reaches Jacobs Alumni Servers.
+                    </p>
                 </div>
 
                 <div>
