--- a/registry/templates/payments/subscribe.html
+++ b/registry/templates/payments/subscribe.html
@@ -233,6 +233,7 @@
                     </div>
                 </div>
                 <div id="stripe-sepa-elements">
+                    <p>By providing your IBAN and confirming this payment, you are authorizing Rocketship Inc and Stripe, our payment service provider, to send instructions to your bank to debit your account and your bank to debit your account in accordance with those instructions. You are entitled to a refund from your bank under the terms and conditions of your agreement with your bank. A refund must be claimed within 8 weeks starting from the date on which your account was debited.</p>
                     <label for="sepa-element" class="uk-form-label">
                         SEPA Direct debit
                     </label>
