Bugfix overview templates

--- a/registry/templates/portal/parts/general.html
+++ b/registry/templates/portal/parts/general.html
@@ -57,6 +57,6 @@
         </table>
     </div>
     <div class="uk-card-footer">
-        <a href="/edit/" class="uk-button uk-button-text">Edit General Information</a>
+        <a href="{% url 'edit' %}" class="uk-button uk-button-text">Edit General Information</a>
     </div>
 </div>
