--- a/registry/templates/payments/view.html
+++ b/registry/templates/payments/view.html
@@ -1,15 +1,17 @@
 {% extends "base/base.html" %}
 {% load uikit_tags %}
 
-{% block title %} View Past Payments {% endblock %}
+{% block title %} View Payments{% if admin %} for {{ username }}{% endif %} {% endblock %}
 
 {% block content %}
 <article class="uk-article">
     <h1 class="uk-article-title">
-        View Membership &amp; Payments
+        View Payments{% if admin %} for {{ username }}{% endif %}
     </h1>
 
-    {% include "portal/approval_warning.html" %}
+    {% if admin %}{% else %}
+        {% include "portal/approval_warning.html" %}
+    {% endif %}
 
 
     {% if error %}
@@ -20,6 +22,7 @@
             </p>
         </div>
     {% else %}
+
         <table class="uk-table uk-table-divider">
             <thead>
                 <tr>
@@ -58,6 +61,15 @@
                 {% endfor %}
             </tbody>
         </table>
+    {% endif %}
+
+    {% if admin %}{% else %}
+    <div class="uk-alert uk-alert-primary" uk-alert>
+        <h3>Need help?</h3>
+        <p>
+            If you have any questions, need help or require a receipt, please contact <a href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a>.
+        </p>
+    </div>
     {% endif %}
 </article>
 {% endblock %}
