Add Stripe Dashboard link

--- a/registry/templates/admin/alumni/change_form.html
+++ b/registry/templates/admin/alumni/change_form.html
@@ -1,6 +1,13 @@
 {% extends "admin/change_form.html" %}
 {% load i18n admin_urls %}
 {% block object-tools-items %}
+    {% if original.payment %}
+        {% if original.payment.customer %}
+            <li>
+                <a href="https://dashboard.stripe.com/customers/{{ original.payment.customer }}" target="_blank">View on Stripe Dashboard</a>
+            </li>
+        {% endif %}
+    {% endif %}
     <li>
         <a href="{% url 'view_payments_admin' username=original.profile.username %}" target="_blank">View Payments</a>
     </li>
