--- a/registry/templates/admin/alumni/change_form.html
+++ b/registry/templates/admin/alumni/change_form.html
@@ -1,15 +1,24 @@
 {% extends "admin/change_form.html" %}
 {% load i18n admin_urls %}
+
 {% block object-tools-items %}
-    {% if original.payment %}
-        {% if original.payment.customer %}
-            <li>
-                <a href="https://dashboard.stripe.com/{% if stripe_test_mode %}test/{% endif%}customers/{{ original.payment.customer }}" target="_blank">View on Stripe Dashboard</a>
-            </li>
-        {% endif %}
+    {% if original.payment and original.payment.customer %}
+        <li>
+            <a href="https://dashboard.stripe.com/{% if stripe_test_mode %}test/{% endif%}customers/{{ original.payment.customer }}" target="_blank">View on Stripe Dashboard</a>
+        </li>
     {% endif %}
     <li>
         <a href="{% url 'view_payments_admin' username=original.profile.username %}" target="_blank">View Payments</a>
     </li>
     {{ block.super }}
+{% endblock %}
+
+{% block form_top %}
+    {{ block.super }}
+
+    {% if original.payment and original.payment.customer %}{% else %}
+        <p class="errornote">
+            User has not completed setup. 
+        </p>
+    {% endif %}
 {% endblock %}
