--- a/registry/templates/base/base.html
+++ b/registry/templates/base/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load cookielaw_tags %}
+
 <html>
     <head>
     <meta charset="utf-8" />
@@ -23,7 +25,10 @@
                 {% include "base/header.html" %}
             {% endblock %}
 
+
             <div class="main-container uk-padding header-top-margin">
+                {% cookielaw_banner %}
+                
                 {% include "base/devel.html" %}
 
                 {% block content %}
@@ -38,6 +43,7 @@
         </div>
 
         {% block scripts %}
+            <script src="{% static "cookielaw/js/cookielaw.js" %}"></script>
             <script src="{% static "uikit/js/uikit.js" %}" type="text/javascript"></script>
             <script src="{% static "uikit/js/uikit-icons.js" %}" type="text/javascript"></script>
         {% endblock %}
