Make Privacy / Cookie Notice Blue

--- a/registry/templates/cookielaw/banner.html
+++ b/registry/templates/cookielaw/banner.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div uk-alert id="CookielawBanner" class="uk-alert-danger">
+<div uk-alert id="CookielawBanner" class="uk-alert-primary">
     <h3>Cookies disclaimer</h3>
     <p>
             Our site saves small pieces of text information (cookies) on your device. 
