Make Payment View Parameter an ID
Previously, when viewing the payments of a specific user, the URL
pattern expected the username as a parameter. This caused problems for
users with non-alphanumerical characters in their username, preventing
the administration page from loading.

This commit fixes the regression, by altering the parameter of the
payments view to be an id instead of a username.

--- a/registry/templates/admin/alumni/change_form.html
+++ b/registry/templates/admin/alumni/change_form.html
@@ -8,7 +8,7 @@
         </li>
     {% endif %}
     <li>
-        <a href="{% url 'view_payments_admin' username=original.profile.username %}" target="_blank">View Payments</a>
+        <a href="{% url 'view_payments_admin' id=original.profile.id %}" target="_blank">View Payments</a>
     </li>
     {{ block.super }}
 {% endblock %}
