Add announcements for approved Alumni

--- a/registry/templates/portal/index.html
+++ b/registry/templates/portal/index.html
@@ -14,6 +14,7 @@
     </p>
 
     {% include "portal/approval_warning.html" %}
+    {% include "portal/announcements.html" %}
 
     <div data-uk-grid>
 
