Fix typo in template

--- a/registry/templates/portal/parts/skills.html
+++ b/registry/templates/portal/parts/skills.html
@@ -9,7 +9,7 @@
             <tbody>
                 <tr>
                     <td>Alumni Mentor</td>
-                    <td>{{ user.alumni.skills.mentor|print_boolean }}</td>
+                    <td>{{ user.alumni.skills.alumniMentor|print_boolean }}</td>
                 </tr>
                 {% if user.alumni.skills.otherDegrees %}
                     <tr>
