Update landing page

--- a/registry/templates/registry/index.html
+++ b/registry/templates/registry/index.html
@@ -61,10 +61,10 @@
                     Contributor – Standard membership for 39€ p.a.
                 </li>
                 <li>
-                    Patron – Premium membership (incl. additional benefits) for 249€ p.a.
+                    Starter – Membership for fresh graduates (or those not ready to financially contribute) for free
                 </li>
                 <li>
-                    Starter – Membership for fresh graduates (or those in financial need) for 0.01€ (1 symbolic cent) p.a.
+                    Patron – Premium membership (incl. additional benefits) for 249€ p.a.
                 </li>
             </ul>
         </p>
