--- a/registry/templates/registry/index.html
+++ b/registry/templates/registry/index.html
@@ -29,25 +29,34 @@
         </div>
 
         <p>
-            If you are registering with the Association for the first time, you will enjoy the following benefits:
+            Your @jacobs-alumni.de email account is hosted on G Suite and comes with access to various apps as well as unlimited Google Drive space.
+        </p>
+        <p>
+            Additionally, as a member you will enjoy the following benefits:
             <ul>
                 <li>
-                    Google account <em>@jacobs-alumni.de</em> e-mail and access to various apps
+                    Voting rights in the General Assembly of the Jacobs Alumni Association.
                 </li>
                 <li>
-                    Unlimited Google Drive space
+                    Eligibility as a mentee or mentor for 1 year mentoring program.
                 </li>
                 <li>
-                    More easily connect with other alumni via our membership portal
+                    Access to Career Counselling Services.
                 </li>
                 <li>
-                    Stay in touch with the University via regular newsletters
+                    Free access to career seminars and workshops (on campus).
                 </li>
                 <li>
-                    Career services in collaboration with the University
+                    Jacobs Career Fair: Free Silver Package (worth 850€) for own start-ups and spin-off companies.
                 </li>
                 <li>
-                    Invitations to University events and alumni events
+                    Career Services for Alumni Employers: 20% discount on Presentations, Recruiting Events, Workshops, Employer Interviews and Pre-Selection.
+                </li>
+                <li>
+                    Alumni Newsletter to stay up-to-date on all Alumni and University developments
+                </li>
+                <li>
+                    More to come!
                 </li>
             </ul>
         </p>
