Change confirmation text

--- a/registry/templates/payments/subscribe.html
+++ b/registry/templates/payments/subscribe.html
@@ -295,7 +295,7 @@
                     </div>
                 </div>
 
-                <button class="uk-button uk-button-primary">Confirm Membership &amp; Pay Now</button>
+                <button class="uk-button uk-button-primary">CONFIRM MEMBERSHIP &amp; AUTHORIZE PAYMENT NOW</button>
             </form>
         </div>
     </article>
