--- a/custom_auth/templates/auth/login.html
+++ b/custom_auth/templates/auth/login.html
@@ -26,8 +26,6 @@ var login_script_settings = {
 }
 </script>
 <script type="text/javascript" src="{% static 'js/login.js' %}"></script>
-<script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
-
 {% endblock %}
 
 {% block content %}
@@ -49,4 +47,19 @@ var login_script_settings = {
         </form>
     </div>
 </article>
+
+<script type="text/javascript">
+
+    // Workaround for Login Button not working properly
+    // is to only load it onload, and also add it dynamically
+    // see e.g. https://github.com/google/google-api-javascript-client/issues/397
+
+    window.onload = function() {
+        var scriptNode = document.createElement('script');
+        scriptNode.src = "https://apis.google.com/js/platform.js?onload=init";
+        scriptNode.type = 'text/javascript';
+        scriptNode.charset = 'utf-8';
+        document.getElementsByTagName('head')[0].appendChild(scriptNode);
+    }
+</script>
 {% endblock %}
