--- a/registry/templates/map/profile.html
+++ b/registry/templates/map/profile.html
@@ -18,30 +18,42 @@
 {% block content %}
 <article class="uk-article">
     <h1 class="uk-article-title">
-        Jacobs Alumni Member
+        {{ alumni.firstName }} {% if alumni.middleName %}{{ alumni.middleName }}{% endif %}{{ alumni.lastName }}
+
+        {% if alumni.social.showOnMap %}
+            {% if alumni.social.facebook %}
+                <a class="uk-icon-button" target="_blank" href="{{alumni.social.facebook}}" uk-icon="icon: facebook" alt="Facebook">
+                </a>
+            {% endif %}
+            {% if alumni.social.linkedin %}
+                <a class="uk-icon-button" target="_blank" href="{{alumni.social.linkedin}}" uk-icon="icon: linkedin" alt="LinkedIn">
+                </a>
+            {% endif %}
+            {% if alumni.social.twitter %}
+                <a class="uk-icon-button" target="_blank" href="{{alumni.social.twitter}}" uk-icon="icon: twitter" alt="Twitter">
+                </a>
+            {% endif %}
+            {% if alumni.social.instagram %}
+                <a class="uk-icon-button" target="_blank" href="{{alumni.social.instagram}}" uk-icon="icon: instagram" alt="instagram">
+                </a>
+            {% endif %}
+        {% endif %}
     </h1>
 
     <p class="uk-article-lead">
+
+        {% if alumni.social.showOnMap %}
+            <a href="mailto:{{alumni.approval.gsuite}}">{{alumni.approval.gsuite}}</a>
+
+            {% if alumni.social.homepage %}
+            &nbsp;-&nbsp; <a href="{{alumni.social.homepage}}" target="_blank">{{alumni.social.homepage}}</a>
+            {% endif %}
+        {% endif %}
+
         <div class="uk-grid">
             <div class="uk-width-1-2">
                 <table class="uk-table uk-table-small">
                     <tbody>
-                        <tr>
-                            <td>First Name</td>
-                            <td>{{ alumni.firstName | safe }}</td>
-                        </tr>
-        
-                        {% if alumni.middleName is not None %}
-                            <tr>
-                                <td>Middle Name</td>
-                                <td>{{ alumni.middleName | safe }}</td>
-                            </tr>
-                        {% endif %}
-        
-                        <tr>
-                            <td>Last Name</td>
-                            <td>{{ alumni.lastName|safe }}</td>
-                        </tr>
         
                         {% if alumni.birthdayVisible %}
                         
@@ -60,8 +72,9 @@
                 </table>
             </div>
 
-            <div class="uk-width-1-2">
+            <div class="uk-width-1-2" style="text-align: right; ">
                 <div id="map" class="map"></div>
+                lives in <i>{{alumni.address.city}}, {{alumni.address.country.name}}</i>
             </div>
         </div>
     </p>
