--- a/registry/templates/portal/parts/skills.html
+++ b/registry/templates/portal/parts/skills.html
@@ -14,19 +14,19 @@
                 {% if user.alumni.skills.otherDegrees %}
                     <tr>
                         <td>Other Degrees</td>
-                        <td>{{ user.alumni.skills.otherDegrees|safe }}</td>
+                        <td>{{ user.alumni.skills.otherDegrees }}</td>
                     </tr>
                 {% endif %}
                 {% if user.alumni.skills.spokenLanguages %}
                     <tr>
                         <td>Spoken Languages</td>
-                        <td>{{ user.alumni.skills.spokenLanguages|safe }}</td>
+                        <td>{{ user.alumni.skills.spokenLanguages }}</td>
                     </tr>
                 {% endif %}
                 {% if user.alumni.skills.programmingLanguages %}
                     <tr>
                         <td>Programming Languages</td>
-                        <td>{{ user.alumni.skills.programmingLanguages|safe }}</td>
+                        <td>{{ user.alumni.skills.programmingLanguages }}</td>
                     </tr>
                 {% endif %}
                 {% if user.alumni.skills.areasOfInterest %}
