--- a/registry/templates/map/index.html
+++ b/registry/templates/map/index.html
@@ -29,7 +29,7 @@
             <caption>Search Examples</caption>
             <tbody>
                 <tr>
-                    <td><code>name</code> Search By Full Name</td>
+                    <td><code>text</code> Fulltext Search witin Name, Education and Skills Fields</td>
                     <td><code>city: City</code> Search By City</td>
                     <td></td>
                 </tr>
