Prevent html injection by not marking fields as safe

--- a/registry/templates/portal/parts/account.html
+++ b/registry/templates/portal/parts/account.html
@@ -7,7 +7,7 @@
             <tbody>
                 <tr>
                     <td>Portal Username</td>
-                    <td>{{ user.username | safe }}</td>
+                    <td>{{ user.username }}</td>
                 </tr>
 
                 <tr>
