--- a/registry/templates/portal/parts/social.html
+++ b/registry/templates/portal/parts/social.html
@@ -9,31 +9,31 @@
                 {% if user.alumni.social.facebook %}
                     <tr>
                         <td>Facebook</td>
-                        <td>{{ user.alumni.social.facebook|safe }}</td>
+                        <td>{{ user.alumni.social.facebook }}</td>
                     </tr>
                 {% endif %}
                 {% if user.alumni.social.twitter %}
                     <tr>
                         <td>Twitter</td>
-                        <td>{{ user.alumni.social.twitter|safe }}</td>
+                        <td>{{ user.alumni.social.twitter }}</td>
                     </tr>
                 {% endif %}
                 {% if user.alumni.social.linkedin %}
                     <tr>
                         <td>LinkedIn</td>
-                        <td>{{ user.alumni.social.linkedin|safe }}</td>
+                        <td>{{ user.alumni.social.linkedin }}</td>
                     </tr>
                 {% endif %}
                 {% if user.alumni.social.instagram %}
                     <tr>
                         <td>Instagram</td>
-                        <td>{{ user.alumni.social.instagram|safe }}</td>
+                        <td>{{ user.alumni.social.instagram }}</td>
                     </tr>
                 {% endif %}
                 {% if user.alumni.social.homepage %}
                     <tr>
                         <td>Homepage</td>
-                        <td>{{ user.alumni.social.homepage|safe }}</td>
+                        <td>{{ user.alumni.social.homepage }}</td>
                     </tr>
                 {% endif %}
                 <tr>
